Added experimental support for Mercurial
Implemented a new HistorReader for Mercurial support. Due to the fact
that we don't have a Java binding for Mercurial yet, this prototype
will wrap around the shell commands. This gave a poor perfomance for
the history reader, so it will cache the output from the hg log
commands into a file. The web-server must set "SCAN_REPOS" to true in
web.xml to let the webservice scan for Mercurial repositories during
startup. The path to the repositories must be specified with the -m
option when the index database should be created.

--- a/conf/offwhite/web.xml
+++ b/conf/offwhite/web.xml
@@ -21,6 +21,16 @@
     <param-value>&lt;div id="MastheadLogo"&gt; &lt;h1&gt; OpenGrok &lt;/h1&gt; &lt;/div&gt;</param-value>
     <description>OPTIONAL: Fragment of html encoded html that will be used for the title or logo of the project</description>
   </context-param>
+  
+  <context-param>
+    <param-name>SCAN_REPOS</param-name>
+    <param-value>false</param-value>
+    <description>Set this variable to true if you would like the web application to scan for external repositories (Mercurial)</description>
+  </context-param>
+  <listener>
+   <listener-class>org.opensolaris.opengrok.web.WebappListener</listener-class>
+  </listener>
+    
   <servlet>
     <servlet-name>search</servlet-name>
     <display-name>Source Finder</display-name>
