--- a/conf/default/web.xml
+++ b/conf/default/web.xml
@@ -22,7 +22,16 @@
     <description>OPTIONAL: Fragment of html encoded html that will be used for the title or logo of the project</description>
   </context-param>
 
-  <servlet>
+  <context-param>
+    <param-name>SCAN_REPOS</param-name>
+    <param-value>false</param-value>
+    <description>Set this variable to true if you would like the web application to scan for external repositories (Mercurial)</description>
+  </context-param>
+  <listener>
+   <listener-class>org.opensolaris.opengrok.web.WebappListener</listener-class>
+  </listener>
+    
+    <servlet>
     <servlet-name>search</servlet-name>
     <display-name>Source Finder</display-name>
     <jsp-file>/search.jsp</jsp-file>
