--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,12 @@ endorsed.classpath=
 excludes=
 file.reference.ant.jar=${ant.library.dir}/ant.jar
 file.reference.bcel-5.2.jar=lib/bcel-5.2.jar
-file.reference.lucene-core-3.0.2.jar=lib/lucene-core-3.0.2.jar
-file.reference.lucene-spellchecker-3.0.2.jar=lib/lucene-spellchecker-3.0.2.jar
 file.reference.jrcs.jar=lib/jrcs.jar
+lucene.version=3.5.0
+lucene-core.jar=lucene-core-${lucene.version}.jar
+lucene-spellchecker.jar=lucene-spellchecker-${lucene.version}.jar
+file.reference.lucene-core.jar=lib/${lucene-core.jar}
+file.reference.lucene-spellchecker.jar=lib/${lucene-spellchecker.jar}
 file.reference.servlet-api.jar=lib/servlet-api.jar
 file.reference.swing-layout-0.9.jar=lib/swing-layout-0.9.jar
 includes=**
@@ -48,8 +51,8 @@ javac.classpath=\
     ${file.reference.jrcs.jar}:\
     ${file.reference.servlet-api.jar}:\
     ${file.reference.swing-layout-0.9.jar}:\
-    ${file.reference.lucene-core-3.0.2.jar}:\
-    ${file.reference.lucene-spellchecker-3.0.2.jar}
+    ${file.reference.lucene-core.jar}:\
+    ${file.reference.lucene-spellchecker.jar}
  
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
@@ -83,6 +86,7 @@ jnlp.signed=false
 main.class=org.opensolaris.opengrok.index.Indexer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
