--- a/build.xml
+++ b/build.xml
@@ -488,7 +488,8 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
         </path>
         <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask" classpathref="pmd.lib"/>
         <mkdir dir="pmd"/>
-        <pmd targetjdk="1.6" failuresPropertyName="pmd.num.warnings" rulesetfiles="tools/pmd_ruleset.xml">
+        <pmd failuresPropertyName="pmd.num.warnings" rulesetfiles="tools/pmd_ruleset.xml">
+            <version>java 1.7</version>
             <formatter type="html" toFile="pmd/pmd_report.html"/>
             <formatter type="xml" toFile="pmd/pmd_report.xml"/>
             <fileset dir="src" includes="**/*.java"/>
@@ -784,8 +785,8 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
 			javaencoding="UTF-8"
 			uriroot="${build.dir}/src/web"
 			package="${codebase.dot}.jsp"
-			compilersourcevm="1.6"
-			compilertargetvm="1.6"
+			compilersourcevm="1.7"
+			compilertargetvm="1.7"
 			smapsuppressed="false"
 			webxmlfragment="${build.dir}/src/servlets_web.xml"
 			/>
@@ -808,7 +809,7 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
 			deprecation="${deprecation}" classpathref="classpath.jsp"
 			encoding="UTF-8" listfiles="${listfiles}"
 			includeantruntime="false">
-            <compilerarg value="-Xlint:unchecked" compiler="javac1.6"/>
+            <compilerarg value="-Xlint:unchecked" compiler="javac1.7"/>
         </javac>
     </target>
 
