--- a/build.xml
+++ b/build.xml
@@ -195,41 +195,41 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
         <jflex file="${src.dir}/org/opensolaris/opengrok/search/context/PlainLineTokenizer.lex" destdir="${src.generatedsrc.dir}"/>
     </target>
     
-    <property name="hg" value="hg"/>
+    <property name="git" value="git"/>
 
     <!-- Get the id of the changeset we're building from using a
          Mercurial command.
       -->
     <target name="-get-changeset-from-command"
-            depends="-check-is-hg-repo" if="build.from.repo">
-        <exec executable="${hg}"
+            depends="-check-is-git-repo" if="build.from.repo">
+        <exec executable="${git}"
               failifexecutionfails="no"
               outputproperty="changeset">
-            <arg value="identify"/>
-            <arg value="--id"/>
+            <arg value="rev-parse"/>
+            <arg value="HEAD"/>
         </exec>
     </target>
 
     <!-- Check if we build from a checked out copy of the repository,
-         so that we have history information from Mercurial available.
+         so that we have history information from git available.
       -->
-    <target name="-check-is-hg-repo">
-        <available property="build.from.repo" file=".hg" type="dir"/>
+    <target name="-check-is-git-repo">
+        <available property="build.from.repo" file=".git" type="dir"/>
     </target>
 
     <!-- Get the id of the changeset we're building from by reading
-         .hg_archival.txt file created by hg archive. This will only
+         .git_archival.txt file created by git archive. This will only
          be used when we're not building from a checked out copy of
          the repository, for example the source distribution.
       -->
     <target name="-get-changeset-from-file"
-            depends="-check-is-hg-repo" unless="build.from.repo">
-        <tempfile property="hg.archival.temp" deleteonexit="true"/>
-        <copy file=".hg_archival.txt" tofile="${hg.archival.temp}"/>
-        <replaceregexp file="${hg.archival.temp}" flags="s"
+            depends="-check-is-git-repo" unless="build.from.repo">
+        <tempfile property="git.archival.temp" deleteonexit="true"/>
+        <copy file=".git_archival.txt" tofile="${git.archival.temp}"/>
+        <replaceregexp file="${git.archival.temp}" flags="s"
                      match=".*node: ([0-9a-f]{12}).*"
                      replace="\1"/>
-        <loadfile srcFile="${hg.archival.temp}" property="changeset"/>
+        <loadfile srcFile="${git.archival.temp}" property="changeset"/>
     </target>
 
     <target name="-update-build-info"
