--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ derby.log
 nbproject/genfiles.properties
 glassfish
 webrev
+opengrok-web-nbproject/nbproject/private/
+opengrok-web-nbproject/nbproject/genfiles.properties
