findbugs build should have source to generated files, too

--- a/build.xml
+++ b/build.xml
@@ -443,7 +443,8 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
                     <include name="*.jar"/>
                 </fileset>
             </auxClasspath>
-            <sourcePath path="src" />
+	    <sourcePath path="${src.dir}"/>
+	    <!--sourcePath path="${src.generatedsrc.dir}"/>-->
             <class location="${dist.dir}/opengrok.jar" />
         </findbugs>
     </target>
@@ -461,7 +462,8 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
                     <include name="*.jar"/>
                 </fileset>
             </auxClasspath>
-            <sourcePath path="src" />
+	    <sourcePath path="${src.dir}"/>
+	    <!--<sourcePath path="${src.generatedsrc.dir}"/>-->
             <class location="${dist.dir}/opengrok.jar" />
         </findbugs>
     </target>
