fix OpenGrok to support JDK 7 in Solaris docs update pmd 5.0.2 support

--- a/build.xml
+++ b/build.xml
@@ -443,8 +443,8 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
                     <include name="*.jar"/>
                 </fileset>
             </auxClasspath>
-	    <sourcePath path="${src.dir}"/>
-	    <!--sourcePath path="${src.generatedsrc.dir}"/>-->
+            <sourcePath path="${src.dir}"/>
+            <sourcePath path="${src.generatedsrc.dir}"/>
             <class location="${dist.dir}/opengrok.jar" />
         </findbugs>
     </target>
@@ -462,8 +462,8 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
                     <include name="*.jar"/>
                 </fileset>
             </auxClasspath>
-	    <sourcePath path="${src.dir}"/>
-	    <!--<sourcePath path="${src.generatedsrc.dir}"/>-->
+            <sourcePath path="${src.dir}"/>
+            <sourcePath path="${src.generatedsrc.dir}"/>
             <class location="${dist.dir}/opengrok.jar" />
         </findbugs>
     </target>
@@ -502,7 +502,7 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
         <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask" classpathref="pmd.lib"/>
         <mkdir dir="pmd"/>
         <pmd failuresPropertyName="pmd.num.warnings" rulesetfiles="tools/pmd_ruleset.xml">
-            <version>java 1.7</version>
+	    <sourcelanguage name="java" version="1.7" />
             <formatter type="html" toFile="pmd/pmd_report.html"/>
             <formatter type="xml" toFile="pmd/pmd_report.xml"/>
             <fileset dir="src" includes="**/*.java"/>
