--- a/opengrok-web-nbproject/nbproject/project.properties
+++ b/opengrok-web-nbproject/nbproject/project.properties
@@ -25,13 +25,18 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+lucene.version=4.2.0
+lucene-core.jar=lucene-core-${lucene.version}.jar
+lucene-analyzers-common.jar=lucene-analyzers-common-${lucene.version}.jar
+lucene-queryparser.jar=lucene-queryparser-${lucene.version}.jar
+lucene-suggest.jar=lucene-suggest-${lucene.version}.jar
+file.reference.lucene-core.jar=../lib/${lucene-core.jar}
+file.reference.lucene-analyzers-common.jar=../lib/${lucene-analyzers-common.jar}
+file.reference.lucene-queryparser.jar=../lib/${lucene-queryparser.jar}
+file.reference.lucene-suggest.jar=../lib/${lucene-suggest.jar}
 file.reference.ant.jar=${ant.library.dir}/ant.jar
 file.reference.bcel-5.2.jar=../lib/bcel-5.2.jar
 file.reference.jrcs.jar=../lib/jrcs.jar
-file.reference.lucene-analyzers-common-4.1.0.jar=../lib/lucene-analyzers-common-4.1.0.jar
-file.reference.lucene-core-4.1.0.jar=../lib/lucene-core-4.1.0.jar
-file.reference.lucene-queryparser-4.1.0.jar=../lib/lucene-queryparser-4.1.0.jar
-file.reference.lucene-suggest-4.1.0.jar=../lib/lucene-suggest-4.1.0.jar
 file.reference.opengrok-generatedsrc=../generatedsrc
 file.reference.opengrok-src=../src
 file.reference.opengrok-test=../test
@@ -52,10 +57,10 @@ javac.classpath=\
     ${file.reference.bcel-5.2.jar}:\
     ${file.reference.jrcs.jar}:\
     ${reference.opengrok.jar}:\
-    ${file.reference.lucene-analyzers-common-4.1.0.jar}:\
-    ${file.reference.lucene-core-4.1.0.jar}:\
-    ${file.reference.lucene-queryparser-4.1.0.jar}:\
-    ${file.reference.lucene-suggest-4.1.0.jar}
+    ${file.reference.lucene-core.jar}:\
+    ${file.reference.lucene-analyzers-common.jar}:\
+    ${file.reference.lucene-queryparser.jar}:\
+    ${file.reference.lucene-suggest.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.debug=true
