--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
 
     -->
 
-    <property name="version" value="0.12-dev"/>
+    <property name="version" value="0.11-stable"/>
     <property name="distname" value="opengrok"/>
     <property name="src.dir" location="src"/>
     <property name="src.generatedsrc.dir" location="generatedsrc"/>
