opensolaris.org cleanup; closes issue #5

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,7 +8,7 @@ annotation.processing.run.all.processors=true
 # read-only and ant.home is predefined by Ant.
 ant.library.dir=${ant.home}/lib
 
-application.homepage=http://www.opensolaris.org/os/project/opengrok/
+application.homepage=http://opengrok.github.io/OpenGrok/
 application.title=OpenGrok
 application.vendor=
 build.classes.dir=${build.dir}/classes
