--- a/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
+++ b/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
@@ -58,15 +58,6 @@ createTableAuthors=\
     NAME VARCHAR(32672), \
     CONSTRAINT AUTHORS_REPO_NAME_UNIQUE UNIQUE (REPOSITORY, NAME))
 
-createTableTags=\
-  CREATE TABLE OPENGROK.TAGS (\
-    ID INT CONSTRAINT TAGS_PK PRIMARY KEY, \
-    REPOSITORY INT NOT NULL \
-        CONSTRAINT TAGS_FK_REPO \
-          REFERENCES OPENGROK.REPOSITORIES ON DELETE CASCADE, \
-    NAME VARCHAR(32672), \
-    CONSTRAINT TAGS_REPO_NAME_UNIQUE UNIQUE (REPOSITORY, NAME))
-
 createTableChangesets=\
   CREATE TABLE OPENGROK.CHANGESETS (\
     ID INT CONSTRAINT CHANGESETS_PK PRIMARY KEY, \
@@ -77,9 +68,6 @@ createTableChangesets=\
     AUTHOR INT NOT NULL \
         CONSTRAINT CHANGESETS_FK_AUTH \
           REFERENCES OPENGROK.AUTHORS ON DELETE CASCADE, \
-    TAG INT \
-        CONSTRAINT CHANGESETS_FK_TAG \
-          REFERENCES OPENGROK.TAGS ON DELETE CASCADE, \
     TIME TIMESTAMP NOT NULL, \
     MESSAGE VARCHAR(32672) NOT NULL, \
     CONSTRAINT CHANGESETS_REPO_REV_UNIQUE UNIQUE (REPOSITORY, REVISION))
@@ -113,7 +101,7 @@ hasCacheForDirectory=\
   WHERE D.REPOSITORY = R.ID AND R.PATH = ? AND D.PATH = ?
 
 getFileHistory=\
-  SELECT CS.REVISION, A.NAME, T.NAME, CS.TIME, CS.MESSAGE, CS.ID \
+  SELECT CS.REVISION, A.NAME, CS.TIME, CS.MESSAGE, CS.ID \
   FROM \
       OPENGROK.CHANGESETS CS \
           JOIN OPENGROK.FILECHANGES FC ON CS.ID = FC.CHANGESET \
@@ -121,20 +109,18 @@ getFileHistory=\
           JOIN OPENGROK.DIRECTORIES D ON D.ID = F.DIRECTORY \
           JOIN OPENGROK.AUTHORS A ON A.ID = CS.AUTHOR \
           JOIN OPENGROK.REPOSITORIES R ON D.REPOSITORY = R.ID \
-          LEFT JOIN OPENGROK.TAGS T ON T.ID = CS.TAG \
   WHERE \
       R.PATH = ? AND D.PATH = ? AND F.NAME = ? \
   ORDER BY CS.ID DESC
 
 getDirHistory=\
-  SELECT CS.REVISION, A.NAME, T.NAME, CS.TIME, CS.MESSAGE, CS.ID \
+  SELECT CS.REVISION, A.NAME, CS.TIME, CS.MESSAGE, CS.ID \
   FROM \
       OPENGROK.CHANGESETS CS \
           JOIN OPENGROK.DIRCHANGES DC ON CS.ID = DC.CHANGESET \
           JOIN OPENGROK.DIRECTORIES D ON DC.DIRECTORY = D.ID \
           JOIN OPENGROK.AUTHORS A ON A.ID = CS.AUTHOR \
           JOIN OPENGROK.REPOSITORIES R ON D.REPOSITORY = R.ID \
-          LEFT JOIN OPENGROK.TAGS T ON T.ID = CS.TAG \
   WHERE \
       R.PATH = ? AND D.PATH = ? \
   ORDER BY CS.ID DESC
@@ -150,8 +136,8 @@ addRepository=INSERT INTO OPENGROK.REPOSITORIES(PATH) VALUES ?
 
 addChangeset=\
   INSERT INTO OPENGROK.CHANGESETS \
-  (REPOSITORY, REVISION, AUTHOR, TAG, TIME, MESSAGE, ID) \
-  VALUES (?,?,?,?,?,?,?)
+  (REPOSITORY, REVISION, AUTHOR, TIME, MESSAGE, ID) \
+  VALUES (?,?,?,?,?,?)
 
 addDirchange=INSERT INTO OPENGROK.DIRCHANGES(CHANGESET, DIRECTORY) VALUES (?,?)
 
@@ -160,10 +146,6 @@ addFilechange=INSERT INTO OPENGROK.FILECHANGES(CHANGESET, FILE) VALUES (?,?)
 getAuthors=SELECT NAME, ID FROM OPENGROK.AUTHORS WHERE REPOSITORY = ?
 
 addAuthor=INSERT INTO OPENGROK.AUTHORS (REPOSITORY, NAME, ID) VALUES (?,?,?)
-
-getTags=SELECT NAME, ID FROM OPENGROK.TAGS WHERE REPOSITORY = ?
-
-addTags=INSERT INTO OPENGROK.TAGS (REPOSITORY, NAME, ID) VALUES (?,?,?)
 
 getDirectories=SELECT PATH, ID FROM OPENGROK.DIRECTORIES WHERE REPOSITORY = ?
 
@@ -189,8 +171,6 @@ getMaxDirId=SELECT MAX(ID) FROM OPENGROK.DIRECTORIES
 getMaxChangesetId=SELECT MAX(ID) FROM OPENGROK.CHANGESETS
 
 getMaxAuthorId=SELECT MAX(ID) FROM OPENGROK.AUTHORS
-
-getMaxTagId=SELECT MAX(ID) FROM OPENGROK.TAGS
 
 # Cascading deletes will take care of deleting all data associated with the
 # repository from the other tables.
