generate history of files renamed in Mercurial repo separately fixes #22

--- a/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
+++ b/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
@@ -94,7 +94,8 @@ createTableFilechanges=\
     CHANGESET INT NOT NULL \
         CONSTRAINT FILECHANGES_FK_CS \
           REFERENCES OPENGROK.CHANGESETS ON DELETE CASCADE, \
-    CONSTRAINT FILECHANGES_PK PRIMARY KEY (FILE, CHANGESET))
+    MOVED SMALLINT NOT NULL, \
+    CONSTRAINT FILECHANGES_PK PRIMARY KEY (FILE, CHANGESET, MOVED))
 
 hasCacheForDirectory=\
   SELECT 1 FROM OPENGROK.REPOSITORIES R, OPENGROK.DIRECTORIES D \
@@ -127,8 +128,9 @@ getDirHistory=\
 
 getFilesInChangeset=\
   SELECT D.PATH || '/' || F.NAME \
-  FROM OPENGROK.DIRECTORIES D, OPENGROK.FILES F, OPENGROK.FILECHANGES FC \
-  WHERE D.ID = F.DIRECTORY AND F.ID = FC.FILE AND FC.CHANGESET = ?
+    FROM OPENGROK.DIRECTORIES D, OPENGROK.FILES F, OPENGROK.FILECHANGES FC \
+    WHERE D.ID = F.DIRECTORY AND F.ID = FC.FILE AND FC.MOVED = 0 \
+    AND FC.CHANGESET = ?
 
 getRepository=SELECT ID FROM OPENGROK.REPOSITORIES WHERE PATH = ?
 
@@ -141,7 +143,8 @@ addChangeset=\
 
 addDirchange=INSERT INTO OPENGROK.DIRCHANGES(CHANGESET, DIRECTORY) VALUES (?,?)
 
-addFilechange=INSERT INTO OPENGROK.FILECHANGES(CHANGESET, FILE) VALUES (?,?)
+addFilechange=INSERT INTO OPENGROK.FILECHANGES(CHANGESET, FILE, MOVED) \
+    VALUES (?,?,?)
 
 getAuthors=SELECT NAME, ID FROM OPENGROK.AUTHORS WHERE REPOSITORY = ?
 
@@ -163,6 +166,9 @@ getLatestCachedRevision=\
   SELECT REVISION FROM OPENGROK.CHANGESETS WHERE ID = \
     (SELECT MAX(CS.ID) FROM OPENGROK.CHANGESETS CS, OPENGROK.REPOSITORIES R \
             WHERE CS.REPOSITORY = R.ID AND R.PATH = ?)
+
+getChangesetIdForRevision=\
+  SELECT ID FROM OPENGROK.CHANGESETS WHERE REVISION = ?
 
 getMaxFileId=SELECT MAX(ID) FROM OPENGROK.FILES
 
