store changesets which changed file when it was named differently in extra table

--- a/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
+++ b/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
@@ -86,6 +86,16 @@ createTableDirchanges=\
           REFERENCES OPENGROK.CHANGESETS ON DELETE CASCADE, \
     CONSTRAINT DIRCHANGES_PK PRIMARY KEY (DIRECTORY, CHANGESET))
 
+createTableFilemoves=\
+  CREATE TABLE OPENGROK.FILEMOVES (\
+    FILE INT NOT NULL \
+        CONSTRAINT FILEMOVES_FK_FILE \
+          REFERENCES OPENGROK.FILES ON DELETE CASCADE, \
+    CHANGESET INT NOT NULL \
+        CONSTRAINT FILEMOVES_FK_CS \
+          REFERENCES OPENGROK.CHANGESETS ON DELETE CASCADE, \
+    CONSTRAINT FILEMOVES_PK PRIMARY KEY (FILE, CHANGESET))
+
 createTableFilechanges=\
   CREATE TABLE OPENGROK.FILECHANGES (\
     FILE INT NOT NULL \
@@ -94,8 +104,7 @@ createTableFilechanges=\
     CHANGESET INT NOT NULL \
         CONSTRAINT FILECHANGES_FK_CS \
           REFERENCES OPENGROK.CHANGESETS ON DELETE CASCADE, \
-    MOVED SMALLINT NOT NULL, \
-    CONSTRAINT FILECHANGES_PK PRIMARY KEY (FILE, CHANGESET, MOVED))
+    CONSTRAINT FILECHANGES_PK PRIMARY KEY (FILE, CHANGESET))
 
 hasCacheForDirectory=\
   SELECT 1 FROM OPENGROK.REPOSITORIES R, OPENGROK.DIRECTORIES D \
@@ -105,7 +114,8 @@ getFileHistory=\
   SELECT CS.REVISION, A.NAME, CS.TIME, CS.MESSAGE, CS.ID \
   FROM \
       OPENGROK.CHANGESETS CS \
-          JOIN OPENGROK.FILECHANGES FC ON CS.ID = FC.CHANGESET \
+          JOIN (SELECT * FROM OPENGROK.FILECHANGES UNION \
+            SELECT * FROM OPENGROK.FILEMOVES) as FC ON CS.ID = FC.CHANGESET \
           JOIN OPENGROK.FILES F ON FC.FILE = F.ID \
           JOIN OPENGROK.DIRECTORIES D ON D.ID = F.DIRECTORY \
           JOIN OPENGROK.AUTHORS A ON A.ID = CS.AUTHOR \
@@ -129,7 +139,7 @@ getDirHistory=\
 getFilesInChangeset=\
   SELECT D.PATH || '/' || F.NAME \
     FROM OPENGROK.DIRECTORIES D, OPENGROK.FILES F, OPENGROK.FILECHANGES FC \
-    WHERE D.ID = F.DIRECTORY AND F.ID = FC.FILE AND FC.MOVED = 0 \
+    WHERE D.ID = F.DIRECTORY AND F.ID = FC.FILE \
     AND FC.CHANGESET = ?
 
 getRepository=SELECT ID FROM OPENGROK.REPOSITORIES WHERE PATH = ?
@@ -143,8 +153,11 @@ addChangeset=\
 
 addDirchange=INSERT INTO OPENGROK.DIRCHANGES(CHANGESET, DIRECTORY) VALUES (?,?)
 
-addFilechange=INSERT INTO OPENGROK.FILECHANGES(CHANGESET, FILE, MOVED) \
-    VALUES (?,?,?)
+addFilechange=INSERT INTO OPENGROK.FILECHANGES(CHANGESET, FILE) \
+    VALUES (?,?)
+
+addFilemove=INSERT INTO OPENGROK.FILEMOVES(CHANGESET, FILE) \
+    VALUES (?,?)
 
 getAuthors=SELECT NAME, ID FROM OPENGROK.AUTHORS WHERE REPOSITORY = ?
 
