parallelize history indexing of renamed files fixes #728

--- a/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
+++ b/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
@@ -181,7 +181,7 @@ getLatestCachedRevision=\
             WHERE CS.REPOSITORY = R.ID AND R.PATH = ?)
 
 getChangesetIdForRevision=\
-  SELECT ID FROM OPENGROK.CHANGESETS WHERE REVISION = ?
+  SELECT ID FROM OPENGROK.CHANGESETS WHERE REVISION = ? AND REPOSITORY = ?
 
 getMaxFileId=SELECT MAX(ID) FROM OPENGROK.FILES
 
